2002-04-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-retrieve): Don't call w3m-cache-request-header
	when type is nil.

2002-04-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-follow-redirection): New user option.
	(w3m-w3m-attributes): Set w3m-current-redirect as nil.
	(w3m-cookie-command-arguments): Abolish.
	(w3m-request-arguments): Use cookie only when w3m-use-cookies is
	non-nil.
	(w3m-header-arguments): New function.
	(w3m-w3m-retrieve): Treat redirection when w3m-follow-redirection
	is non-nil.
	(w3m-w3m-retrieve-1): Renamed from w3m-w3m-retrieve.
	(w3m-prepare-content): Don't care w3m-current-redirect.
	(w3m-goto-url): Ditto.

	* w3m-form.el (w3m-form-new): Added argumnet enctype.
	(w3m-form-enctype): New macro.
	(w3m-form-plist): Changed definition.
	(w3m-form-put-property): Ditto.
	(w3m-form-make-form-data): Removed optional argument urlencode;
	Encode form data acording to w3m-form-enctype.
	(w3m-form-mee-new): Set enctype field.
	(w3m-form-parse-and-fontify): Parse enctype.
	(w3m-form-submit): Don't pass enctype argumnet.

2002-04-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put a property of
	`w3m-name-anchor' as a list.
	(w3m-move-point-for-localcgi): Use `w3m-search-name-anchor'.
	(w3m-search-name-anchor): Use `member' when compare a name with
	`w3m-name-anchor'. Fix continuous name-anchor.

2002-03-30  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-m17n.el (shimbun-m17n-group-path-alist): Add
	an entry of mule@m17n.org.

2002-03-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-element-body)
	(mew-shimbun-get-id-msgs, mew-shimbun-unseen-check)
	(mew-shimbun-unseen-setup): Use `match-string' instead of
	`mew-match'.
	(top): Define `mew-local-folder-alist' to avoid byte-compile
	warings.
	(mew-shimbun-goto-folder, mew-shimbun-retrieve-article): Support
	Mew 3.0.55 or later.

	* mew-w3m.el (mew-mime-text/html-w3m): Use `match-string' instead